# Add sub directories
add_subdirectory(cout_namespce_struct_enum_union)
add_subdirectory(stringtest)
add_subdirectory(overload)
add_subdirectory(reference)
add_subdirectory(newdelete)
add_subdirectory(typecast)
add_subdirectory(classtest)
add_subdirectory(copy_construct_func)
add_subdirectory(initlist)
add_subdirectory(const_func)
add_subdirectory(destroy_constructor_func)
add_subdirectory(this_pointer)
add_subdirectory(virtual_func)
add_subdirectory(future)
